fix main and modal width on mobile

--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ main {
   flex: 1 0 auto;
 }
 
+@media only screen and (max-width:768px) {
+  main {
+    width: 100%;
+  }
+}
+
 h1 {
   text-align: center;
 }
@@ -102,7 +108,7 @@ footer p {
 
 @media only screen and (max-width:768px) {
   .modal-lg {
-    max-width: 95%;
+    max-width: 90%;
   }
 }
 
